# manufactory_api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 042145725d4d_dell_tags_from_place.py  07a2be7f77f1_remove_cameras_place_camera_link_tables_.py  21e736e4d7d2_make_many_to_many.py  253c107c160d_.py  2585de2295f6_add_ip_to_places.py  333e7561401a_add_alarmmessages_table (2).py  43d44f9cd8da_dell_column_data_for_read_from_places.py  4b56313b5507_add_tags_columt_to_places.py  70ff4708cdcb_add_alarm_history.py  9173fac332a4_add_message_thread_id_to_place.py  9440ff1e007b_dell_place_comment.py  9d48337c2ef7_add_cameras_table.py  a9bf16e95025_initial_migration.py  c12178d8cd73_add_column_to_cameras_table.py  e4f98c623c8c_add_plcdata_table.py  e5848ba692a5_add_data_for_read_column_to_places.py  f0726a962ad8_change_operationhistory_column_name.py  fc1a5e3f26e3_fix_alarm_history_relationship.py  ff09490fd5a8_add_places_table_and_modify_place_id_in_.py
api-gateway/: nginx.conf
mosquitto/config/: mosquitto.conf
mosquitto/data/: mosquitto.db
scr/: __init__.py  config.py  database.py  main.py
scr/date_logger/: model.py  router.py  service.py  workmode.py
scr/db/: operation_history.py
scr/operation_history/: models.py  router.py  schemas.py  services.py
scr/utils/: logging.py
services/hmi_statistic/: Dockerfile  README.md  pyproject.toml
services/hmi_statistic/src/: app.py  main.py
services/item_checker/: Dockerfile  README.md  pyproject.toml
services/item_checker/src/: app.py
services/item_checker/src/routers/: routers.py
services/item_checker/src/static/: styles.css
services/item_checker/src/templates/: form.html  table.html
services/item_checker/src/util/: main.py  utils.py
services/plc_data_hub/: Dockerfile  README.md  pyproject.toml
services/plc_data_hub/src/: app.py  main.py
services/plc_data_hub/src/api/: router.py
services/plc_data_hub/src/core/: get_plcs.py  plc_log_reader.py  plc_reader.py
services/plc_data_hub/src/plc/: __init__.py  plc_client.py  plc_data_models.py
services/plc_data_hub/src/utils/: utils.py
services/plc_data_service/: Dockerfile  pyproject.toml
services/plc_data_service/src/plc_data_history/: main.py
services/plc_hub_service/: Dockerfile
services/plc_hub_service/src/: app.py
services/test/plc_data_history/: plc_log_reader.py  read.py  warehouse_robots.py
shared/config/: __init__.py  config.py
shared/db/: base.py
shared/db/industrial_stg/: database.py
shared/db/manufactory/: database.py
shared/utils/: __init__.py  logger.py
src/: config.py  database.py  main.py
src/alarm/: schemas.py
src/alarm_service/: router.py  services.py
src/alarms/: router.py  schemas.py  services.py
src/api/: app.py  server.py
src/api/alarm/: router.py  schemas.py  services.py
src/api/alarm_service/: router.py  services.py
src/api/operation/: router.py  schemas.py  services.py
src/api/operation_history/: router.py  schemas.py  services.py
src/api/place/: router.py  schemas.py  services.py
src/api/printer/: router.py  schemas.py  services.py  zpl_class.py
src/bot/: bot.py  services.py
src/camera/: schemas.py  services.py
src/db/: base.py  models.py  operation_history.py  places.py
src/db/model/: alarmmessages.py  camera.py  operationhistory.py  place.py  placecameralink.py  program.py
src/db/repo/: _base_repo.py  alarmmessagesrepo.py  camerarepo.py  (+3 more)
src/frontend/: Dockerfile  package-lock.json  package.json
src/operation_history/: controllers.py  router.py  schemas.py  services.py  utils.py
src/places/: router.py
src/services/: Dockerfile
src/telegram_bot/: services.py
src/utils/: logging.py
(+21 files in other folders)
