[tool.poetry]
name = "manufactory-api"
version = "1.0.0"
description = ""
authors = ["petrl <sup686@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
fastapi = "^0.115.0"
alembic = "^1.13.3"
aiogram = "^3.13.1"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
