[tool.poetry]
name = "manufactory-api"
version = "0.1.0"
description = ""
authors = ["petrl <sup686@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.2"
alembic = "^1.13.3"
aiogram = "^3.13.1"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
uvicorn = "^0.32.0"
python-snap7 = "^2.0.0"
zpl = "^0.1.11"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
