[tool.poetry]
name = "item-checker"
version = "0.1.0"
description = ""
authors = ["petrl <sup686@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jinja2 = "^3.1.4"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
asyncio = "^3.4.3"
annotated-types = "^0.7.0"
anyio = "^4.6.2.post1"
asyncpg = "^0.30.0"
click = "^8.1.7"
colorama = "^0.4.6"
greenlet = "^3.1.1"
h11 = "^0.14.0"
idna = "^3.10"
markupsafe = "^3.0.2"
pydantic = "^2.9.2"
pydantic-core = "^2.26.0"
python-multipart = "^0.0.17"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.36"
starlette = "^0.41.2"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
